--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "mint-tokens": "node --no-warnings --loader=./loader.js src/cli/mint-tokens.ts"
+    "mint-tokens": "node --no-warnings --loader=./loader.js src/cli/mint-tokens.ts",
+    "update-metadata": "node --no-warnings --loader=./loader.js src/cli/update-cip68-meta.ts"
   },
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.4.0",
